# big-hardware-info

./: .gitignore  README.md  default.nix  feedback.md  flake.nix  pyproject.toml
locale/: bg.po  big-hardware-info.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
pkgbuild/: PKGBUILD
pkgbuild/big-hardware-info/: config  packed-refs
pkgbuild/big-hardware-info/objects/pack/: pack-e556eb4dd50480a0441198205bbf80eec1f72ecd.idx  pack-e556eb4dd50480a0441198205bbf80eec1f72ecd.pack  (+1 more)
pkgbuild/pkg/big-hardware-info/: .BUILDINFO  .MTREE  .PKGINFO
src/app/: __init__.py  __main__.py
src/app/collectors/: __init__.py  base_collector.py
src/app/export/: html_generator.py
src/app/resources/: style.css
src/app/ui/: builders.py  cards.py  dialogs.py  highlighting.py  main_window.py  search.py  sections.py  widgets.py
src/app/ui/renderers/: __init__.py  base.py  (+11 more)
src/app/utils/: style_manager.py
src/big_hardware_info/: __init__.py  __main__.py
src/big_hardware_info/collectors/: inxi_collector.py  inxi_parser.py  logs_collector.py  pci_collector.py  webcam_collector.py
src/big_hardware_info/export/: __init__.py  html_generator.py
src/big_hardware_info/models/: hardware_info.py
src/big_hardware_info/ui/: __init__.py  builders.py  dialogs.py  main_window.py  sections.py  widgets.py
src/big_hardware_info/utils/: constants.py  i18n.py  style_manager.py
tests/: conftest.py  test_html_sidebar_i18n.py  test_i18n_separation.py
(+72 files in other folders)
